# Sampled-MinHashing

./: .gitignore  CMakeLists.txt  README.md  run.py
cmake/: SMHExtraTargets.cmake  uninstall.cmake
data/: test.corpus  test.vocab
examples/: images.py  predict.py  test_cluster.py
include/: array_lists.h  ifindex.h  ifutils.h  listdb.h  mhlink.h  mhsearch.h  minhash.h  sampledmh.h  textio.h  topics.h  types.h  weights.h
include/mhsearch/: mhsearch.h
include/smh/: array_lists.h  ifindex.h  listdb.h  mhlink.h  minhash.h  sampledmh.h  types.h  weights.h
modules/: clusters.py
python/: CMakeLists.txt  listdb.i  sampledmh.i  setup.py.in  smh.i  smh.py  smh_api.i
python/smh/: CMakeLists.txt  __init__.py  array_lists.i  array_lists.py  array_lists_wrap.c  bksmh.py  cluster.py  ifindex.i  listdb.i  mhlink.i  minhash.i  sampledmh.i  smh.py  smh_api.i  weights.i
report/: title.block  various_clusters.yaml
scripts/: analyse_clusters.py  create_report.sh  create_tfdocs_10fold.sh
src/: CMakeLists.txt
src/ifutils/: id2term.py  ifutils.py  make_ifs.py
src/make_ifs/: CMakeLists.txt  make_ifs.c  weights.c
src/mhclus/: CMakeLists.txt  array_lists.c  ifindex.c  listdb.c  mhclus.c  mhlink.c  minhash.c  sampledmh.c  textio.c  weights.c
src/mhclus/include/: minhash.h
src/mhclus/src/: ifutils.c  mhclus.c  minhash.c
src/pyclusters/: Utils.py  clusters.py  clusters2.py  coherence.py  distance.py  jsd_rand.py
src/reuters/: docs2tfdocs.py  docsutils.py
src/smh/: #ifindex.c#  CMakeLists.txt  array_lists.c  ifindex.c  listdb.c  make_ifs.c  mhlink.c  mhsearch.c  minhash.c  sampledmh.c  smhcmd.c  topics.c  weights.c
src/tests/: CMakeLists.txt  test_array_lists.c  test_cluster.c  test_ifindex.c  test_listdb.c  test_minhash.c  test_prune.c  test_sampledmh.c  test_topics.c  test_topics_backup.c  test_topics_binaryifs.c
src/utils/: CMakeLists.txt  ifutils.c
src/weights/: CMakeLists.txt
src/weights/include/: ifutils.h
src/weights/src/: CMakeLists.txt  ifutils.c
webapp/: __init__.py  views.py
webapp/templates/: default.html  explore.html  index.html  list.html  macros.html  showimage.html  vocab.html  wordcloud.html  wordcloudd.html  wordclouds.html
