set (MHCLUS_SRCS mhclus array_lists listdb ifindex topics minhash sampledmh mhlink)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include )
add_library(array_lists array_lists)
add_library(listdb listdb)
add_library(ifindex ifindex)
add_library(textio textio)
add_library(minhash minhash)
add_library(sampledmh sampledmh)
add_library(mhlink mhlink)
add_executable( mhclus mhclus )
target_link_libraries( mhclus mhlink sampledmh minhash ifindex listdb array_lists m)
