set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include )
add_library(array_lists array_lists)
add_library(listdb listdb)
add_library(weights weights)
add_library(ifindex ifindex)
add_library(textio textio)
add_library(minhash minhash)
add_library(mhsearch mhsearch)
add_library(sampledmh sampledmh)
add_library(mhlink mhlink)
add_library(smh SHARED textio mhlink sampledmh minhash ifindex weights listdb array_lists)
add_executable( smhcmd smhcmd )
target_link_libraries( smhcmd mhlink sampledmh minhash ifindex weights listdb array_lists m)
