set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include/smh )
add_library(mt19937-64 mt19937-64)
add_library(array_lists array_lists)
add_library(listdb listdb)
add_library(weights weights)
add_library(ifindex ifindex)
add_library(minhash minhash)
add_library(sampledmh sampledmh)
add_library(mhlink mhlink)
add_library(smh SHARED mhlink sampledmh minhash ifindex weights listdb array_lists mt19937-64)
add_executable( smhcmd smhcmd )
target_link_libraries( smhcmd mhlink sampledmh minhash ifindex weights listdb array_lists mt19937-64 m)
install(TARGETS smhcmd RUNTIME DESTINATION /usr/local/bin)
install(TARGETS smh LIBRARY DESTINATION /usr/local/lib)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/smh DESTINATION /usr/local/include/)
