set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include )
add_executable( test_array_lists test_array_lists )
target_link_libraries( test_array_lists array_lists)
add_executable( test_listdb test_listdb )
target_link_libraries( test_listdb listdb array_lists)
add_executable( test_ifindex test_ifindex )
target_link_libraries( test_ifindex ifindex listdb array_lists)
add_executable( test_minhash test_minhash )
target_link_libraries( test_minhash minhash ifindex listdb array_lists m)
add_executable( test_sampledmh test_sampledmh )
target_link_libraries( test_sampledmh sampledmh minhash ifindex listdb array_lists m)
# add_executable( test_topics test_topics )
# target_link_libraries( test_topics listdb array_lists)
# add_executable( test_topics_binaryifs test_topics_binaryifs )
# target_link_libraries( test_topics_binaryifs listdb array_lists)