set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories( ${PROJECT_SOURCE_DIR}/include/smh )
add_executable( test_array_lists test_array_lists )
target_link_libraries( test_array_lists array_lists)
add_executable( test_listdb test_listdb )
target_link_libraries( test_listdb listdb array_lists)
add_executable( test_ifindex test_ifindex )
target_link_libraries( test_ifindex ifindex listdb array_lists weights m)
add_executable( test_minhash test_minhash )
target_link_libraries( test_minhash minhash ifindex listdb array_lists m)
add_executable( test_sampledmh test_sampledmh )
target_link_libraries( test_sampledmh sampledmh minhash ifindex listdb array_lists weights m)
add_executable( test_prune test_prune )
target_link_libraries( test_prune sampledmh minhash ifindex listdb array_lists weights m)
add_executable( test_cluster test_cluster )
target_link_libraries( test_cluster mhlink sampledmh minhash ifindex listdb array_lists weights m)
